--- a/package.json
+++ b/package.json
@@ -37,16 +37,17 @@
     "@angular/core": "^15.2.10",
     "@angular/forms": "^15.2.10",
     "@angular/google-maps": "^12.2.13",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
-    "@angular/material": "^15.2.9",
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "11.0.1",
     "@nebular/eva-icons": "11.0.1",
     "@nebular/security": "11.0.1",
     "@nebular/theme": "11.0.1",
     "@swimlane/ngx-charts": "^14.0.0",
+    "@types/ws": "^8.5.4",
     "angular2-chartjs": "0.4.1",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
@@ -61,6 +62,7 @@
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "~1.2.9",
     "ng2-completer": "^9.0.1",
+    "ng2-pdf-viewer": "^7.0.0",
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
     "normalize.css": "6.0.0",
